# leptos-shadcn-ui

./: .clippy.toml  .coverage-rules.toml  .gitignore  Cargo.minimal.toml  Cargo.toml  Makefile  PROJECT_PLAN.md  justfile  main.go  package.json  rustfmt.toml
.beads/: beads.jsonl
.cargo/: config.toml
.drover/: drover.db
.drover/worktrees/task-1767764820542877154/: README.md  RELEASE_NOTES_v0.8.1.md  RELEASE_READINESS_ASSESSMENT.md  RELEASE_SUMMARY_v0.9.0.md  package-lock.json  package.json
.drover/worktrees/task-1767764820542877154/.config/: nextest.toml
.drover/worktrees/task-1767764820542877154/demo/: index.html
.drover/worktrees/task-1767764820542877154/demo-simple/: Cargo.toml
.drover/worktrees/task-1767764820542877154/demo-simple/src/: main.rs
.drover/worktrees/task-1767764820542877154/examples/comprehensive-demo/: Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  test-results.json  test-results.xml
.drover/worktrees/task-1767764820542877154/examples/comprehensive-demo/scripts/: build-and-test.sh  serve.js
.drover/worktrees/task-1767764820542877154/examples/comprehensive-demo/src/: lib.rs
.drover/worktrees/task-1767764820542877154/examples/comprehensive-demo/tests/: demo.spec.ts
.drover/worktrees/task-1767764820542877154/examples/dashboard-demo/: index.html  package.json
.drover/worktrees/task-1767764820542877154/examples/dashboard-demo/src/: lib.rs
.drover/worktrees/task-1767764820542877154/examples/leptos/: Cargo.leptos-only.toml  Cargo.minimal.toml  Cargo.standalone.toml  Cargo.tailwind-leptos.toml  Cargo.tailwind-only.toml  Cargo.toml.backup  Trunk.toml  dependency_tree.txt  full_tree.txt  index.html  package-lock.json  package.json  playwright.config.ts  run-tests.sh  tailwind.config.js  test-results.json  test-results.xml  test_color_api.rs
.drover/worktrees/task-1767764820542877154/examples/leptos/src/: app.rs  comprehensive_demo.rs  default.rs  enhanced_demo.rs  enhanced_interactive_demo.rs  lazy_loading.rs  minimal_test.rs  simple_test.rs
.drover/worktrees/task-1767764820542877154/examples/leptos/src/default/: components_demo.rs  dialog.rs
.drover/worktrees/task-1767764820542877154/examples/leptos/src/default/alert/: alert.rs  alert_destructive.rs
.drover/worktrees/task-1767764820542877154/examples/leptos/src/new_york/: dialog.rs
.drover/worktrees/task-1767764820542877154/examples/leptos/style/: optimization.css  tailwind.css  tailwind.output.css.backup
.drover/worktrees/task-1767764820542877154/examples/leptos/tests/: comprehensive-demo.spec.ts  interaction-tests.spec.ts  mock-server.spec.ts  performance-tests.spec.ts  server-startup.spec.ts  tailwind-rs-core.spec.ts  visual-regression.spec.ts
.drover/worktrees/task-1767764820542877154/tarpaulin-coverage/: tarpaulin-report.html
.drover/worktrees/task-1767765225063234966/.github/workflows/: bundle-size-monitor.yml
.drover/worktrees/task-1767765225063234966/scripts/ci/: check_bundle_size.sh
.github/workflows/: clippy.yml  coverage-report.yml  cross-browser-tests.yml  demo-deploy.yml  fmt.yml  test-radio-group.yml  test-tooltip.yml  website.yml
comprehensive-demo/: Cargo.toml
docs/: MEASUREMENT_AND_BENCHMARKING_GUIDE.md  OPTIMIZATION_PATTERNS_COOKBOOK.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROFILING_QUICK_REFERENCE.md  README.md  wasm-optimization.md
docs/components/: API_REFERENCE.md  mobile-design-guidelines.md
docs/components/api/: accordion.md  alert-dialog.md  alert.md  aspect-ratio.md  avatar.md  badge.md  breadcrumb.md  button.md  calendar.md  card.md  carousel.md  checkbox.md  collapsible.md  combobox.md  command.md  context-menu.md  dialog.md  drawer.md  dropdown-menu.md  error-boundary.md  form.md  hover-card.md  input-otp.md  input.md  label.md  lazy-loading.md  menubar.md  navigation-menu.md  pagination.md  popover.md  progress.md  radio-group.md  registry.md  resizable.md  scroll-area.md  select.md  separator.md  sheet.md  skeleton.md  slider.md  (+7 more)
docs/design/: README.md  THEME_DIFFERENCES.md  landscape-orientation.md  landscape-quick-reference.md  mobile-guidelines.md  mobile-patterns.md  mobile-utilities.md
docs/remediation/: WASM_COMPATIBILITY_REMEDIATION_PLAN.md  WASM_REMEDIATION_SUMMARY.md
docs/testing/: coverage-quick-reference.md  coverage-reporting.md
docs/tutorials/: README.md
docs/tutorials/video-tutorials/: production-guide.md
docs/tutorials/video-tutorials/advanced/: 01-state-management.md
docs/tutorials/video-tutorials/components/: 01-form-components.md
docs/tutorials/video-tutorials/getting-started/: 01-installation.md  02-first-component.md  03-basic-forms.md  04-styling-theming.md
examples/dashboard-demo/: Cargo.toml
examples/dashboard-demo/src/: lib.rs
examples/leptos/: Cargo.leptos-only.toml  Cargo.minimal.toml  Cargo.standalone.toml  Cargo.tailwind-leptos.toml  Cargo.tailwind-only.toml  Cargo.toml  Cargo.toml.backup
examples/leptos/src/: component_browser.rs  lazy_loading.rs  main.rs  wasm_loading_example.rs
examples/leptos/src/default/: orientation_demo.rs
examples/leptos/src/default/form/: form_example.rs
examples/leptos/style/: orientation.css
examples/mobile-demo/src/: lib.rs
examples/mobile-first-demo/src/: lib.rs
gh-pages-demo/: Cargo.toml
performance-audit/: Cargo.toml
performance-audit/src/: automated_monitoring.rs  lib.rs  memory_safety.rs
scripts/: build-wasm-optimized.sh  coverage_reporter.py  generate_coverage_report.sh
standalone-demo/: Cargo.toml
tests/: coverage-reporting-tests.rs
tests/e2e/: accessibility-automation.ts  cross-browser-compatibility.spec.ts  cross-browser.config.ts  dynamic-loading.spec.ts  feature-detection.ts  gesture-tests.spec.ts  landscape-orientation.spec.ts  touch-accessibility.spec.ts  touch-interaction.spec.ts  viewport-test-utils.ts  viewport.spec.ts
tests/e2e/component-tests/: card.spec.ts  touch-button.spec.ts  touch-slider.spec.ts  touch-switch.spec.ts
tests/e2e/helpers/: browser-detection.ts  touch-utils.ts
wasm-demo/: Cargo.toml
(+8 files in other folders)
