[package]
name = "leptos-shadcn-comprehensive-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Leptos framework
leptos = { version = "0.8.9", features = ["csr"] }
leptos_meta = { version = "0.8.5" }

# WASM dependencies
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["v4", "js"] }

# Tailwind-RS
tailwind-rs-core = "0.8.1"
tailwind-rs-wasm = "0.8.1"

# Published ShadCN UI components (refactored versions)
leptos-shadcn-drawer = "0.9.1"
leptos-shadcn-context-menu = "0.9.1"
leptos-shadcn-alert-dialog = "0.9.1"
leptos-shadcn-select = "0.9.1"
leptos-shadcn-command = "0.9.1"

# Additional components for comprehensive demo
leptos-shadcn-button = "0.9.0"
leptos-shadcn-card = "0.9.0"
leptos-shadcn-input = "0.9.0"

[lib]
crate-type = ["cdylib"]
