[package]
name = "leptos-shadcn-performance-audit"
version = "0.1.0"
edition = "2021"
description = "Performance audit and monitoring system for leptos-shadcn-ui components"
homepage = "https://github.com/cloud-shuttle/leptos-shadcn-ui"
repository = "https://github.com/cloud-shuttle/leptos-shadcn-ui"
license = "MIT"
authors = ["CloudShuttle <info@cloudshuttle.com>"]
keywords = ["leptos", "performance", "audit", "monitoring", "benchmark"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Core dependencies (WASM-safe)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

# Time and duration handling
chrono = { version = "0.4", features = ["serde"] }

# Statistics and math
online-statistics = "0.2"
nalgebra = "0.32"

# Random number generation
rand = "0.10"

# Desktop-only dependencies (filesystem, networking, async runtime)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2.0"
glob = "0.3"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
indicatif = { version = "0.18", optional = true }

[dev-dependencies]
proptest = "1.0"

# Desktop-only dev-dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
tokio-test = "0.4"

[[bench]]
name = "component_benchmarks"
harness = false

[features]
default = ["monitoring", "benchmarks"]
monitoring = []
benchmarks = []
cli = ["indicatif"]
web = ["wasm-bindgen", "web-sys"]

# Web dependencies (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
