[package]
name = "leptos-shadcn-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Leptos framework
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }

# WASM dependencies
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["v4", "js"] }

# Tailwind-RS
tailwind-rs-core = "0.4.2"
tailwind-rs-leptos = "0.4.2"

# Local components (using published versions for now)
leptos-shadcn-button = "0.8.0"
leptos-shadcn-card = "0.8.0"
leptos-shadcn-input = "0.8.0"

[lib]
crate-type = ["cdylib"]

# [[bin]]
# name = "leptos-shadcn-demo"
# path = "src/main.rs"
