[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"
authors = ["CloudShuttle <info@cloudshuttle.com>"]
license = "MIT"
repository = "https://github.com/cloud-shuttle/leptos-shadcn-ui"
description = "WASM demo showcasing leptos-shadcn-ui-wasm package"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Leptos framework (using workspace dependencies)
leptos = { workspace = true, features = ["csr"] }
leptos-shadcn-ui-wasm = { path = "../packages/leptos-shadcn-ui-wasm" }

# WASM-specific dependencies (using workspace where available)
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Performance"
] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
