[package]
name = "leptos-shadcn-dashboard-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Leptos framework (using workspace dependencies)
leptos = { workspace = true, features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.5"

# ShadCN UI components (using workspace dependencies)
leptos-shadcn-button = { workspace = true }
leptos-shadcn-card = { workspace = true }
leptos-shadcn-input = { workspace = true }
leptos-shadcn-badge = { workspace = true }
leptos-shadcn-avatar = { workspace = true }
leptos-shadcn-dropdown-menu = { workspace = true }
leptos-shadcn-separator = { workspace = true }
leptos-shadcn-progress = { workspace = true }
leptos-shadcn-tabs = { workspace = true }
leptos-shadcn-dialog = { workspace = true }
leptos-shadcn-sheet = { workspace = true }
leptos-shadcn-scroll-area = { workspace = true }
leptos-shadcn-collapsible = { workspace = true }
leptos-shadcn-command = { workspace = true }
leptos-shadcn-popover = { workspace = true }
leptos-shadcn-select = { workspace = true }
leptos-shadcn-switch = { workspace = true }
leptos-shadcn-toast = { workspace = true }
leptos-shadcn-tooltip = { workspace = true }

# WASM dependencies (using workspace where available)
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }

[dependencies.uuid]
version = "1.18.1"
features = ["js"]
