[package]
name = "standalone-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos framework (using workspace dependencies)
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

# WASM dependencies (using workspace where available)
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true }
uuid = { version = "1.0", features = ["v4", "js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local components (using workspace dependencies)
leptos-shadcn-button = { workspace = true }
leptos-shadcn-card = { workspace = true }
leptos-shadcn-input = { workspace = true }

# Tailwind-RS (workspace path)
tailwind-rs-core = { path = "../../packages/tailwind-rs-core" }

# Binary target
[[bin]]
name = "standalone-demo"
path = "src/main.rs"