[package]
name = "leptos-shadcn-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos framework with SSR
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = { version = "0.8", features = ["ssr"] }
leptos_meta = { version = "0.8", features = ["ssr"] }
leptos_router = { version = "0.8", features = ["ssr"] }

# Server dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Local components
leptos-shadcn-button = { path = "../packages/leptos/button" }
leptos-shadcn-card = { path = "../packages/leptos/card" }
leptos-shadcn-input = { path = "../packages/leptos/input" }

# Tailwind-RS
tailwind-rs-core = "0.4.2"
tailwind-rs-leptos = "0.4.2"

# UUID support
uuid = { version = "1.0", features = ["v4"] }

# Binary target
[[bin]]
name = "demo"
path = "src/main.rs"
