[package]
name = "leptos-shadcn-comprehensive-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos framework (using workspace dependency)
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { version = "0.8.5" }

# WASM dependencies (using workspace where available)
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true }
uuid = { version = "1.0", features = ["v4", "js"] }

# Tailwind-RS (workspace path)
tailwind-rs-core = { path = "../../packages/tailwind-rs-core" }

# ShadCN UI components (workspace paths)
leptos-shadcn-drawer = { workspace = true }
leptos-shadcn-context-menu = { workspace = true }
leptos-shadcn-alert-dialog = { workspace = true }
leptos-shadcn-select = { workspace = true }
leptos-shadcn-command = { workspace = true }

# Additional components for comprehensive demo (workspace paths)
leptos-shadcn-button = { workspace = true }
leptos-shadcn-card = { workspace = true }
leptos-shadcn-input = { workspace = true }

[lib]
crate-type = ["cdylib"]